# pokemon

./: CMakeLists.txt  README.md
src/: attempts.h  battle.h  battler.h  conditions.h  effects.h  elements.h  iattempt.h  icondition.h  ieffect.h  imove.h  inumber.h  itarget.h  main.cpp  moves.h  pokemons.cpp  pokemons.h  utils.h
src/interface/: iattempt.h  icondition.h  ieffect.h  imove.h  inumber.h  itarget.h
